kubernetes/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-api
  namespace: bookstore
  labels:
    app: bookstore-api
    tier: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bookstore-api
      tier: api
  template:
    metadata:
      labels:
        app: bookstore-api
        tier: api
    spec:
      containers:
        - name: bookstore
          image: aluahub/book-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 600m
              memory: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: bookstore-api
  namespace: bookstore
  labels:
    app: bookstore-api
    tier: api
spec:
  type: NodePort
  selector:
    app: bookstore-api
    tier: api
  ports:
    - name: http
      port: 80
      targetPort: 8000
      nodePort: 30080
